--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 :root{
-    font-size: 16px;
+    font-size: 14px;
 }
-
 main{
     font-size: 1.5rem;
+}
+#forecast th, td{
+    border:3px solid lightgray;
 }
